Fix overflow from scroll to auto

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -178,7 +178,7 @@ i {
 
 .chat_list {
     height: calc(100% - 13rem);
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 /* right side - chat */
@@ -233,7 +233,7 @@ i {
     height: calc(100% - 9rem);
     background-image: url(../img/mine.jpg);
     padding-top: 2rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     flex-direction: column;
     flex-wrap: nowrap;
 }
@@ -323,7 +323,6 @@ i {
     .container {
         width: 100%;
         height: 100%;
-
     }
 
     .hidden-md {
@@ -339,26 +338,6 @@ i {
 
 @media screen and (max-width: 540px) {
 
-    .col-12-sm {
-        width: 100%;
-    }
-
-    .col-11-sm {
-        width: calc((100% / 12) *11);
-    }
-
-    .col-8-sm {
-        width: calc((100% / 12) *8);
-    }
-
-    .col-4-sm {
-        width: calc((100% / 12) *4);
-    }
-
-    .col-1-sm {
-        width: calc((100% / 12) *1);
-    }
-
     .hidden-sm {
         display: none;
     }
@@ -373,6 +352,5 @@ i {
 
     .chat_massages_box{
         max-width: 100%;
-
     }: 
 }
